# discord-v5-bot

./: LICENSE  README.md
discord_v5_bot/: Cargo.toml
discord_v5_bot/src/: bot.rs  main.rs  server.rs
discord_v5_bot/src/bot/: roll_dice.rs
