[package]
name = "discord_v5_bot"
version = "0.1.0"
authors = ["Ben Wilson ben.aiken.wilson@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version="0.11", default-features=false, features=["client", "gateway", "rustls_backend", "model"]}
tokio = {version = "1.20", default-features = false, features = ["macros", "rt-multi-thread"]}
rand = "0.8"
axum = "0.5.16"
